# testbhuman

./: README.md  autoload.ini  read_txt.m
bhuman/Src/Modules/MotionControl/: GetUpEngine.cpp  GetUpEngine.h  MotionCombinator.h
bhuman/Src/Tools/Motion/: MofCompiler.cpp
bhuman/getupcmake/: CMakeLists.txt
bhuman/test_getupcmake/: CMakeLists.txt  test_getup.cpp
gu_test2/: .test.cpp.swn  .test.cpp.swo  CMakeLists.txt  getUpEngineDummy.mof  test.cpp
gup_standalone/: BHAssert.cpp  CMakeLists.txt  DebugRequest.cpp  DebugRequest.h  Debugging.h  Eigen.h  File.cpp  Global.h  InMessage.h  InStreams.cpp  Joints.h  MessageIDs.h  MessageQueue.cpp  MessageQueueBase.cpp  OutMessage.h  OutStreams.cpp  Pose2f.h  Random.cpp  Range.h  Semaphore.cpp  Semaphore.h  SimpleMap.cpp  SimpleMap.h  gup_standalone.cpp  gup_standalone.h  lua_function_draft.cpp
libbhuman/: CMakeLists.txt  CMakeListsOLD.txt  CMakeListsOLDOLD.txt  Makefile  NaoBodyII.lua  RoboCupGameControlData.h  bhlowcmd_wrapper.lua  bhuman.cpp  bhuman.h  bhumanemu.cpp  dcmII.cpp  dcmII.h  lua_dcmII.cpp  lua_dcmII.h  lua_dcmII_wrapper.lua  make_and_send.sh  matlab_print.lua  send_cpp.sh  test_NaoBody.lua  test_NaoBodyII.lua  test_test_wrapper.lua  test_test_wrapper2.lua  test_wrapper.lua
libbhuman/cmakebhuman/: CMakeLists.txt
libbhuman/cmakedcmII/: CMakeLists.txt
libbhuman/cmakeluadcmII/: CMakeLists.txt
libbhuman/low/: RoboCupGameControlData.h  SPLCoachMessage.h  SPLStandardMessage.h
libbhuman/print_positions/: CMakeLists.txt  print_positions.cpp
libbhuman/test/: makefile  testb.cpp
libbhuman/test_dcmII/: CMakeLists.txt  test_dcmII.cpp
rswalk2014/: runswift.cmake
rswalk_test/: makefile  test_unsw.cpp
